# books-api-FastAPI-

./: .gitignore  pyproject.toml  readme.md
app/: database.py  exceptions.py  main.py  seed.py
app/models/: __init__.py  book.py
app/repositories/: __init__.py  book_repository.py
app/schemas/: __init__.py  book.py
app/services/: __init__.py  book_service.py
books_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_api.py  test_services.py
