[project]
name = "books-api"
version = "0.1.0"
description = "A simple REST API for managing books"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",  # Required by TestClient
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"